# mamba-ssm-macos

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CITATION.cff  LICENSE  Makefile  README.md  demo_both_architectures.py  download_mamba.sh  download_mamba2_official.py  implementation_notes.md  mamba.md  missing_features.md  pyproject.toml  requirements.txt  run_mamba.py  setup.py  test_mamba2.py
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml
examples/: 01_core_modules.py  01_demo.py  01_text_generation.py  02_basic.py  02_text_generation.py  03_training.py  03_training.yaml  03_understanding_ssm.py  04_performance_analysis.py  05_mixed_precision.py  06_advanced_analysis.py  07_downloaded_model_demo.py  08_mamba2_demo.py  09_perfect_structure_demo.py  __init__.py  benchmark_matmul_einsum.py  run_generation_macos.py  run_mamba2_macos.py  run_mamba2_macos_example.py  run_mamba_minimal.py  run_mamba_selective.py  test_import.py
examples/macos/: README.md  basic_demo.py  benchmark.py  minimal_ssm_demo.py
mamba_ssm/: __init__.py
mamba_ssm/distributed/: distributed_utils.py  tensor_parallel.py
mamba_ssm/models/: config_mamba.py  mixer_seq_simple.py
mamba_ssm/modules/: block.py  mamba2.py  mamba2_macos.py  mamba2_official.py  mamba2_simple.py  mamba_simple.py  mha.py  mlp.py  ssd_minimal.py
mamba_ssm/ops/: selective_scan_interface.py
mamba_ssm/ops/triton/: k_activations.py  layer_norm.py  layernorm_gated.py  selective_state_update.py  softplus.py  ssd_bmm.py  ssd_chunk_scan.py  ssd_chunk_state.py  ssd_combined.py  ssd_state_passing.py
mamba_ssm/utils/: generation.py  hf.py  macos.py  torch.py
scripts/: download_models.py  run_models.py
src/mamba_macos/: __init__.py  models.py  utils.py
tests/: README_macOS.md  __init__.py  run_all_tests.py  run_unit_tests.py  test_basic.py  test_downloaded_model.py  test_generation_macos.py  test_layernorm.py  test_macos.py  test_mamba2_macos.py
tests/integration/: __init__.py  test_unified_system.py
tests/unit/: __init__.py  test_generation_macos.py  test_mamba2_macos.py  test_mamba_macos.py  test_selective_scan_gradients.py
tools/: run_all_tests.py
