[project]
name = "mamba_ssm_macos"
description = "Mamba and Mamba2 SSM implementation for macOS Apple Silicon with MPS acceleration."
readme = "README.md"
authors = [
    { name = "Saurabh Purohit", email = "saurabh97purohit@gmail.com" },
]
requires-python = ">= 3.9"
dynamic = ["version"]
license = { file = "LICENSE" }
keywords = ["mamba", "apple-silicon", "macos", "mps", "state-space-model", "deep-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "torch>=1.12.0",
    "einops",
    "transformers",
    "packaging",
    "ninja; platform_system!='Darwin' or platform_machine!='arm64'",
    "triton; platform_system!='Darwin' or platform_machine!='arm64'",
    "setuptools>=61.0.0",
]
[project.urls]
Repository = "https://github.com/purohit10saurabh/mamba-ssm-macos"
Homepage = "https://github.com/purohit10saurabh/mamba-ssm-macos"
Documentation = "https://github.com/purohit10saurabh/mamba-ssm-macos#readme"

[project.optional-dependencies]
causal-conv1d = [
    "causal-conv1d>=1.2.0"
]
dev = [
    "pytest"
]


[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "torch>=1.12.0",
    "packaging",
    "ninja; platform_system!='Darwin' or platform_machine!='arm64'",
]
build-backend = "setuptools.build_meta"
