[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true

[project]
name = "mamba-ssm-macos"
version = "0.0.0"
description = "Mamba SSM - State Space Models optimized for Apple Silicon"
readme = "README.md"
authors = [
  { name = "Saurabh Purohit", email = "saurabh97purohit@gmail.com" },
]
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["mamba", "apple-silicon", "macos", "mps", "state-space-model", "deep-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Unix",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "torch>=2.0.0",
  "transformers>=4.41.0",
  "numpy>=1.21.0",
  "einops>=0.7.0",
  "huggingface-hub>=0.16.0",
  "hydra-core>=1.3.0",
  "omegaconf>=2.3.0",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "isort>=5.12.0",
  "pre-commit>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[project.urls]
Homepage = "https://github.com/purohit10saurabh/mamba-ssm-macos"
Repository = "https://github.com/purohit10saurabh/mamba-ssm-macos"

[dependency-groups]
dev = [
    "build>=1.4.0",
]

[tool.setuptools_scm]
version_file = "mamba_ssm/_version.py"

[tool.setuptools]
packages = [
  "mamba_ssm",
  "mamba_ssm.models",
  "mamba_ssm.modules",
  "mamba_ssm.ops",
  "mamba_ssm.utils",
]
